// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/cardDetail/CommentsList comments show up 1`] = `
<div>
  <div
    class="CommentsList"
  >
    <div
      class="Comment comment"
    >
      <div
        class="comment-header"
      >
        <img
          class="comment-avatar"
          src="data:image/svg+xml,<svg xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 100 100\\" style=\\"fill: rgb(192, 192, 192);\\"><rect width=\\"100\\" height=\\"100\\" /></svg>"
        />
        <div
          class="comment-username"
        />
        <div
          class="comment-date"
        >
          January 01, 5:30 AM
        </div>
        <div
          class="MenuWrapper"
        >
          <div
            class="Button IconButton"
          >
            <i
              class="CompassIcon icon-dots-horizontal OptionsIcon"
            />
          </div>
        </div>
        <div
          class="comment-date"
        >
          1/1/2021, 5:30:00 AM
        </div>
        <div
          class="MenuWrapper"
        >
          <div
            class="Button IconButton"
          >
            <i
              class="CompassIcon icon-dots-horizontal OptionsIcon"
            />
          </div>
        </div>
      </div>
      <div
        class="comment-text"
      >
        <p>
          Comment 1
        </p>
      </div>
    </div>
    <div
      class="Comment comment"
    >
      <div
        class="comment-header"
      >
        <img
          class="comment-avatar"
          src="data:image/svg+xml,<svg xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 100 100\\" style=\\"fill: rgb(192, 192, 192);\\"><rect width=\\"100\\" height=\\"100\\" /></svg>"
        />
        <div
          class="comment-username"
        />
        <div
          class="comment-date"
        >
          January 01, 5:30 AM
        </div>
        <div
          class="MenuWrapper"
        >
          <div
            class="Button IconButton"
          >
            <i
              class="CompassIcon icon-dots-horizontal OptionsIcon"
            />
          </div>
        </div>
        <div
          class="comment-date"
        >
          1/1/2021, 5:30:00 AM
        </div>
        <div
          class="MenuWrapper"
        >
          <div
            class="Button IconButton"
          >
            <i
              class="CompassIcon icon-dots-horizontal OptionsIcon"
            />
          </div>
        </div>
      </div>
      <div
        class="comment-text"
      >
        <p>
          Comment 2
        </p>
      </div>
    </div>
    <div
      class="commentrow"
    >
      <img
        class="comment-avatar"
        src="data:image/svg+xml,<svg xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 100 100\\" style=\\"fill: rgb(192, 192, 192);\\"><rect width=\\"100\\" height=\\"100\\" /></svg>"
      />
      <div
        class="MarkdownEditor octo-editor newcomment "
      >
        <div
          class="octo-editor-preview octo-placeholder"
        >
          <p>
            Add a comment...
          </p>
        </div>
        <div
          class="octo-editor-activeEditor"
          style="visibility: hidden; position: absolute; top: 0px; left: 0px;"
        >
          <div
            id="simplemde-editor-1-wrapper"
          >
            <textarea
              id="simplemde-editor-1"
              style="display: none;"
            />
          </div>
        </div>
      </div>
      
    </div>
    <hr />
  </div>
</div>
`;

exports[`components/cardDetail/CommentsList comments show up in readonly mode 1`] = `
<div>
  <div
    class="CommentsList"
  >
    <div
      class="Comment comment"
    >
      <div
        class="comment-header"
      >
        <img
          class="comment-avatar"
          src="data:image/svg+xml,<svg xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 100 100\\" style=\\"fill: rgb(192, 192, 192);\\"><rect width=\\"100\\" height=\\"100\\" /></svg>"
        />
        <div
          class="comment-username"
        />
        <div
          class="comment-date"
        >
          January 01, 5:30 AM
        </div>
        <div
          class="MenuWrapper"
        >
          <div
            class="Button IconButton"
          >
            <i
              class="CompassIcon icon-dots-horizontal OptionsIcon"
            />
          </div>
        </div>
        <div
          class="comment-date"
        >
          1/1/2021, 5:30:00 AM
        </div>
      </div>
      <div
        class="comment-text"
      >
        <p>
          Comment 1
        </p>
      </div>
    </div>
    <div
      class="Comment comment"
    >
      <div
        class="comment-header"
      >
        <img
          class="comment-avatar"
          src="data:image/svg+xml,<svg xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 100 100\\" style=\\"fill: rgb(192, 192, 192);\\"><rect width=\\"100\\" height=\\"100\\" /></svg>"
        />
        <div
          class="comment-username"
        />
        <div
          class="comment-date"
        >
          January 01, 5:30 AM
        </div>
        <div
          class="MenuWrapper"
        >
          <div
            class="Button IconButton"
          >
            <i
              class="CompassIcon icon-dots-horizontal OptionsIcon"
            />
          </div>
        </div>
        <div
          class="comment-date"
        >
          1/1/2021, 5:30:00 AM
        </div>
      </div>
      <div
        class="comment-text"
      >
        <p>
          Comment 2
        </p>
      </div>
    </div>
    <hr />
  </div>
</div>
`;
